Fixed overflow in expense issue

--- a/src/hoc/Grid/Column/Column.css
+++ b/src/hoc/Grid/Column/Column.css
@@ -1,5 +1,6 @@
 .Column {
     flex: 0 0 100%; 
+    max-width: 100%;
 }
 
 @media (min-width: 576px) { 
