--- a/src/hoc/Grid/Row/Row.css
+++ b/src/hoc/Grid/Row/Row.css
@@ -1,6 +1,7 @@
 .Row {
     display: flex; 
     flex-wrap: wrap;
+    width: 100%; 
 }
 
 .center {
